# hackathon-2

./: .gitignore  AGENTS.md  BONUS_FEATURES.md  CLAUDE.md  COMPREHENSIVE_TEST_REPORT.md  DEPLOYMENT.md  PHASE2_ANALYSIS_AND_FIXES.md  PHASE3_DEPLOYMENT_STATUS.md  PHASE_I_ADVANCED_DEMO.py  PHASE_I_VERIFICATION_REPORT.md  PHASE_SEPARATION.md  QUICK_FIX_GUIDE.md  README.md  SECURITY.md  SETTINGS_FIX.md  SUBMISSION_CHECKLIST.md  VERCEL_SETUP.md  demo_all_features.py  demo_cli_live.py  hackathon.md  interactive_life_manager.py  interactive_todo.py  main.py  package.json  pyproject.toml  test_cli_workflow_advanced.py  test_us1_demo.py  test_us2_demo.py  test_yearly_recurrence.py  vercel.json
.spec-kit/: config.yaml
backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
backend/middleware/: auth.py
demos/: 01_demo_prayer.py  02_demo_school.py  03_demo_ramzan.py  04_demo_fitness.py  05_demo_chores.py  06_demo_meal.py  07_demo_freelance.py  08_demo_jobhunt.py  09_demo_content.py  10_demo_finance.py  11_demo_learning.py  12_demo_language.py  13_demo_family.py  14_demo_selfcare.py  15_demo_events.py  all_demos_stats.py
phase-1/: PHASE_I_ADVANCED_DEMO.py  demo_all_features.py  demo_cli_live.py  pyproject.toml  test_cli_workflow.py  test_cli_workflow_advanced.py  test_us1_demo.py  test_us2_demo.py  test_yearly_recurrence.py
phase-3/: CHATKIT_STATUS.md  DEMO_SCRIPT.md  DEPLOYMENT.md  QUICK_START.md  README.md  READY_FOR_TESTING.md  SKILLS_AND_AGENTS_USAGE.md  TEST_CHECKLIST.md
phase-4/: AIOPS_GUIDE.md  AIOPS_USAGE_EVIDENCE.md  CHANGELOG.md  CLAUDE.md  (+5 more)
(+388 files in other folders)
